Fix gap, check perfect pixel page accounts

--- a/assets/critical.css
+++ b/assets/critical.css
@@ -992,6 +992,9 @@ a.hover-heading-color:hover {
 .mb-40 {
   margin-bottom: 4rem;
 }
+.mb-60 {
+  margin-bottom: clamp(4rem, 4.5vw, 6rem);
+}
 .mb-custom {
   margin-bottom: calc(var(--space-bottom) * 1px);
 }
@@ -1590,9 +1593,6 @@ variants-dropdown .variant-input label.disable:after {
 .pt-0 {
   padding-top: 0;
 }
-.max-w-custom-all {
-  max-width: var(--max-width);
-}
 .dash-between:not(:last-child):after {
   content: '';
   display: inline-block;
@@ -1600,5 +1600,8 @@ variants-dropdown .variant-input label.disable:after {
   height: var(--dash-width, 1px);
   margin: var(--dash-space, 0 1rem);
   background-color: var(--color-border);
-  margin-bottom: 5px;
+}
+td,
+th {
+  padding: 11px 12px;
 }
