--- a/assets/customer.css
+++ b/assets/customer.css
@@ -77,3 +77,6 @@ label[for="AddressProvinceNew"] {
 .mr-10 {
   margin-right: 1rem;
 }
+.max-w-custom-all {
+  max-width: var(--max-width);
+}
