--- a/assets/theme.css
+++ b/assets/theme.css
@@ -41,10 +41,6 @@ th {
   border: 1px solid var(--color-border);
   vertical-align: middle;
 }
-td,
-th {
-  padding: 11px 12px;
-}
 blockquote {
   background-color: var(--accent-color-second);
   font-size: clamp(1.6rem, 2.5vw, 2rem);
@@ -499,9 +495,6 @@ blockquote {
 }
 .mb-50 {
   margin-bottom: 5rem;
-}
-.mb-60 {
-  margin-bottom: clamp(4rem, 4.5vw, 6rem);
 }
 .ms-5 {
   margin-inline-start: 5px;
@@ -1887,6 +1880,7 @@ modal-popup :is(.modal-overlay) {
   border-radius: var(--btn-radius);
   gap: 0.5rem;
   font-weight: var(--subheading_weight, 500);
+  line-height: normal;
 }
 .success,
 .message-success {
